--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
-
-logging.level.web= DEBUG
+logging.level.web=DEBUG
 logging.level.pl.akazoo.BikeUp=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
